--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -456,3 +456,11 @@ fieldset.finish-step #progressbar {
 fieldset.finish-step {
   margin-top: 100px;
 }
+
+div#loading-spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+}
