--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,6 +364,12 @@ select#delivery-day {
   display: none;
 }
 
+.thank-you-button-div{
+  margin-top: 242px;
+  margin-bottom: 280px;
+  text-align: center;
+}
+
 #thank-you-button {
   color: #000000 !important;
   width: 337px;
@@ -375,11 +381,11 @@ select#delivery-day {
   letter-spacing: 0em;
   text-align: center;
   background: #fac83e;
-  position: absolute;
+  /* position: absolute;
   left: 50%;
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
+  transform: translateX(-50%); */
   outline: none;
   border: 0;
   -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
