display enquires to dashboard enquires page

--- a/assets/css/admin-style.css
+++ b/assets/css/admin-style.css
@@ -32,3 +32,11 @@
   background-color: #2271b1;
   border-color: #2271b1;
 }
+
+#stoff-enquires-table{
+    width: max-content;
+}
+
+#stoff-enquires-table .widefat{
+    width: inherit;
+}
